# sound_feedback_system

./: .env.example  .gitignore  README.md  pyproject.toml
src/: config.py  draw_hand_landmarks.py  integrated.py  main.py  main2.py  sound_generator.py  test.py
src/app/demo_app/: main.py
src/app/double_camera_app/: main.py
src/app/multiple_camera_app/: main.py
src/app/single_camera_app/: main.py
src/app/triple_camera_app/: main.py
src/archive/: main2.py
src/models/: point.py  queue_result.py  timer.py
src/utils/: camera_manager.py  data_recorder.py  data_visualizer.py  face_processor.py  garageband_handler.py  hand_processor.py  main.py  sound_generator.py  test.py  video_recorder.py
