[tool.poetry]
name = "matsui-research"
version = "0.1.0"
description = ""
authors = ["ReiMatsui <rei0203@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "4.10.0.84"
pygame = "^2.6.1"
loguru = "^0.7.2"
opencv-contrib-python = "^4.10.0.84"
mediapipe = "^0.10.15"
pandas = "^2.2.3"



[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/mac"
priority = "default"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

