[tool.poetry]
name = "matsui-research"
version = "0.1.0"
description = ""
authors = ["ReiMatsui <rei0203@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
opencv-python = "4.10.0.84"
pygame = "^2.6.1"
loguru = "^0.7.2"
opencv-contrib-python = "^4.10.0.84"
mediapipe = "^0.10.15"
numpy = "1.26.0"
pandas = "^2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

