[tool.poetry]
name = "matsui-research"
version = "0.1.0"
description = ""
authors = ["ReiMatsui <rei0203@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
loguru = "^0.7.2"
mediapipe = "^0.10.15"
numpy = "1.26.0"
pandas = "^2.2.3"
opencv-contrib-python = "^4.10.0.84"
opencv-python = "^4.10.0.84"
mido = "^1.3.3"
python-rtmidi = "^1.5.8"
pydantic = "^2.10.3"
pydantic-settings = "^2.7.0"
python-dotenv = "^1.0.1"
vpython = "^7.6.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

